13021 Invalid state if bindtextdomain() fails during re-binding Reviewed by: Joshua M. Clulow <josh@sysmgr.org> Approved by: Dan McDonald <danmcd@joyent.com>